Fixed #13168 - Corrected the alignment of the admin inline headers for rtl languages. Thanks for the report and patch, benc.
git-svn-id: http://code.djangoproject.com/svn/django/trunk@13191 bcc190cf-cafb-0310-a4f2-bffc1f526a37

--- a/django/contrib/admin/media/css/rtl.css
+++ b/django/contrib/admin/media/css/rtl.css
@@ -200,7 +200,7 @@ fieldset .field-box {
 
 /* MISC */
 
-.inline-related h2 {
+.inline-related h2, .inline-group h2 {
     text-align: right
 }
 
